[gd_scene load_steps=9 format=3 uid="uid://bh0ln2nnyfq7l"]

[ext_resource type="Texture2D" uid="uid://dmabwqqs3yd4c" path="res://assets/images/wall.jpg" id="1_81pkn"]
[ext_resource type="Script" path="res://prefabs/Wall.gd" id="1_fa4tc"]
[ext_resource type="Texture2D" uid="uid://ch5frsdn46spt" path="res://assets/images/wall_guides/Nothing.png" id="3_0gwef"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wmcb2"]
albedo_texture = ExtResource("1_81pkn")
albedo_texture_force_srgb = true
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_gnvff"]
material = SubResource("StandardMaterial3D_wmcb2")
size = Vector3(2, 5, 2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_pbvd0"]
data = PackedVector3Array(-1, 2.5, 1, 1, 2.5, 1, -1, -2.5, 1, 1, 2.5, 1, 1, -2.5, 1, -1, -2.5, 1, 1, 2.5, -1, -1, 2.5, -1, 1, -2.5, -1, -1, 2.5, -1, -1, -2.5, -1, 1, -2.5, -1, 1, 2.5, 1, 1, 2.5, -1, 1, -2.5, 1, 1, 2.5, -1, 1, -2.5, -1, 1, -2.5, 1, -1, 2.5, -1, -1, 2.5, 1, -1, -2.5, -1, -1, 2.5, 1, -1, -2.5, 1, -1, -2.5, -1, 1, 2.5, 1, -1, 2.5, 1, 1, 2.5, -1, -1, 2.5, 1, -1, 2.5, -1, 1, 2.5, -1, -1, -2.5, 1, 1, -2.5, 1, -1, -2.5, -1, 1, -2.5, 1, 1, -2.5, -1, -1, -2.5, -1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5u7t7"]
transparency = 1
albedo_texture = ExtResource("3_0gwef")

[sub_resource type="PlaneMesh" id="PlaneMesh_sr4y3"]

[node name="Wall" type="Node3D"]
script = ExtResource("1_fa4tc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
mesh = SubResource("BoxMesh_gnvff")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_pbvd0")

[node name="Node3D" type="Node3D" parent="."]

[node name="Glyph3" type="MeshInstance3D" parent="Node3D" groups=["glyph_wall"]]
transform = Transform3D(-4.37114e-08, 2, -8.74228e-08, 0, -8.74228e-08, -2, -1, -8.74228e-08, 3.82137e-15, 1.1, 2.5, 0)
material_override = SubResource("StandardMaterial3D_5u7t7")
mesh = SubResource("PlaneMesh_sr4y3")
skeleton = NodePath("../Glyph2")

[node name="Glyph4" type="MeshInstance3D" parent="Node3D" groups=["glyph_wall"]]
transform = Transform3D(-4.37114e-08, -2, 8.74228e-08, 0, -8.74228e-08, -2, 1, -8.74228e-08, 3.82137e-15, -1.08735, 2.47135, 0.00673914)
material_override = SubResource("StandardMaterial3D_5u7t7")
mesh = SubResource("PlaneMesh_sr4y3")
skeleton = NodePath("../Glyph2")

[node name="Glyph1" type="MeshInstance3D" parent="Node3D" groups=["glyph_wall"]]
transform = Transform3D(1, 0, 0, 0, -8.74228e-08, -2, 0, 2, -8.74228e-08, 0, 2.5, 1.1)
material_override = SubResource("StandardMaterial3D_5u7t7")
mesh = SubResource("PlaneMesh_sr4y3")
skeleton = NodePath("../Glyph2")

[node name="Glyph2" type="MeshInstance3D" parent="Node3D" groups=["glyph_wall"]]
transform = Transform3D(-1, 8.74228e-08, -7.64274e-15, 0, -4.37114e-08, -2, -8.74228e-08, -1, 8.74228e-08, -0.001, 2.5, -1.1)
material_override = SubResource("StandardMaterial3D_5u7t7")
mesh = SubResource("PlaneMesh_sr4y3")
